# rag-poc

./: .gitignore  README.md  ingest.py  mcp_rag_server.py  pyproject.toml  setup.sh  smoke_test.py  step1_ingestion.py  step2_query.py  step3_full_pipeline.py
cli/: main.py  mcp_client.py  mcp_server.py
cli/core/: ollama.py  test_ollama.py
docs/: coding_standards.md  engineering_policy.md
inspector/: Dockerfile  README.md  docker-compose.yml  launch.sh
visualizer/: Dockerfile  docker-compose.yml  export_to_tensorboard.py  pyproject.toml  refresh.sh
